Commit to check auto-update.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="app">
-      <p>Hello this is aws s3 auto-upload test</p>
+      <p>Hello this is aws s3 auto-upload test by PRT</p>
     </div>
     <script type="module" src="/src/main.js"></script>
   </body>
