Changed some files.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app">
-      <p>Hello this is aws s3 auto-upload test.</p>
-    </div>
+    <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
