--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <img src="https://dummy-awss3-test.s3.amazonaws.com/images.jpg" alt="Description of Image">
+    </div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
