--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="app">
-      <img src="https://dummy-awss3-test.s3.amazonaws.com/images.jpg" alt="Description of Image">
+      <img src="https://dummy-awss3-test.s3.amazonaws.com/download+(2).jpg" alt="Description of Image">
     </div>
     <script type="module" src="/src/main.js"></script>
   </body>
